# twins-to-gcal

./: Makefile  catalog.py  class_days.py  course.py  course_code.py  courses.py  kdb.ics  main.py  module.py  pyproject.toml  subscription.py  twins.txt  univ_calendar.py  util.py  weekday.py
